--- a/Smart-city-gRPC/pom.xml
+++ b/Smart-city-gRPC/pom.xml
@@ -9,13 +9,12 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <properties>
-            <maven.compiler.source>8</maven.compiler.source>
-            <maven.compiler.target>8</maven.compiler.target>
-            <protobuf.version>3.25.3</protobuf.version>
-            <protobuf.plugin.version>0.6.1</protobuf.plugin.version>
-            <os.plugin.version>1.7.1</os.plugin.version>
-        </properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+        <protobuf.version>3.25.3</protobuf.version>
+        <protobuf.plugin.version>0.6.1</protobuf.plugin.version>
+        <os.plugin.version>1.7.1</os.plugin.version>
+        <grpc.version>1.53.0</grpc.version>
     </properties>
 
     <dependencies>
@@ -28,7 +27,22 @@
         <dependency>
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
-            <version>${os.plugin.version}</version>
+            <version>${protobuf.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.grpc</groupId>
+            <artifactId>grpc-protobuf</artifactId>
+            <version>${grpc.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.grpc</groupId>
+            <artifactId>grpc-stub</artifactId>
+            <version>${grpc.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.grpc</groupId>
+            <artifactId>grpc-netty-shaded</artifactId>
+            <version>${grpc.version}</version>
         </dependency>
     </dependencies>
 
@@ -50,8 +64,23 @@
                     <protocArtifact>
                         com.google.protobuf:protoc:${protobuf.version}:exe:${os.detected.classifier}
                     </protocArtifact>
+                    <protocPlugins>
+                        <protocPlugin>
+                            <id>grpc-java</id>
+                            <groupId>io.grpc</groupId>
+                            <artifactId>protoc-gen-grpc-java</artifactId>
+                            <version>${grpc.version}</version>
+                        </protocPlugin>
+                    </protocPlugins>
                 </configuration>
                 <executions>
+                    <execution>
+                        <id>generate-protobuf</id>
+                        <goals>
+                            <goal>compile</goal>            <!-- 普通消息 -->
+                            <goal>compile-custom</goal>     <!-- gRPC Stub -->
+                        </goals>
+                    </execution>
                     <execution>
                         <goals>
                             <goal>compile</goal>
