--- a/Smart-city-gRPC/pom.xml
+++ b/Smart-city-gRPC/pom.xml
@@ -64,14 +64,19 @@
                     <protocArtifact>
                         com.google.protobuf:protoc:${protobuf.version}:exe:${os.detected.classifier}
                     </protocArtifact>
-                    <protocPlugins>
-                        <protocPlugin>
-                            <id>grpc-java</id>
-                            <groupId>io.grpc</groupId>
-                            <artifactId>protoc-gen-grpc-java</artifactId>
-                            <version>${grpc.version}</version>
-                        </protocPlugin>
-                    </protocPlugins>
+<!--                    <protocPlugins>-->
+<!--                        <protocPlugin>-->
+<!--                            <id>grpc-java</id>-->
+<!--                            <groupId>io.grpc</groupId>-->
+<!--                            <artifactId>protoc-gen-grpc-java</artifactId>-->
+<!--                            <version>${grpc.version}</version>-->
+<!--                            <mainClass>io.grpc.protobuf.compiler.PluginProtos</mainClass>-->
+<!--                        </protocPlugin>-->
+<!--                    </protocPlugins>-->
+                    <pluginId>grpc-java</pluginId>
+                    <pluginArtifact>
+                        io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}
+                    </pluginArtifact>
                 </configuration>
                 <executions>
                     <execution>
